@@ -45,15 +45,15 @@ INSTALLATION
 
  Directly
 
-        lwp-request -m get http://git.io/jEE6 | sh
+        lwp-request -m get https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
     or
 
-        curl -qsSL http://git.io/jEE6 | sh
+        curl -qsSL https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
     or
 
-        wget --quiet -O- http://git.io/jEE6 | sh
+        wget --quiet -O- https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
 SEE ALSO
 
