@@ -61,7 +61,7 @@ and [Starlight](https://metacpan.org/pod/Starlight) otherwise.
 
 ```sh
 
-    lwp-request -m get http://git.io/jEE6 | sh
+    lwp-request -m get https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
 ```
 
@@ -69,7 +69,7 @@ or
 
 ```sh
 
-    curl -qsSL http://git.io/jEE6 | sh
+    curl -qsSL https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
 ```
 
@@ -77,7 +77,7 @@ or
 
 ```sh
 
-    wget --quiet -O- http://git.io/jEE6 | sh
+    wget --quiet -O- https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
 ```
 
