@@ -61,7 +61,7 @@ __END__
 
 =for markdown ```sh
 
-    lwp-request -m get http://git.io/jEE6 | sh
+    lwp-request -m get https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
 =for markdown ```
 
@@ -69,7 +69,7 @@ or
 
 =for markdown ```sh
 
-    curl -qsSL http://git.io/jEE6 | sh
+    curl -qsSL https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
 =for markdown ```
 
@@ -77,7 +77,7 @@ or
 
 =for markdown ```sh
 
-    wget --quiet -O- http://git.io/jEE6 | sh
+    wget --quiet -O- https://raw.githubusercontent.com/dex4er/PureProxy/master/fatpack/install.sh | sh
 
 =for markdown ```
 
