@@ -14,7 +14,7 @@ while ($_ = <$fh>) {
     my $line = <$fh2>;
     close $fh2;
     next unless /\.(c|cc|cpp|md|pl|pm|psgi|sh|t|txt)$/i or $line =~ m{^#!.*\bperl};
-    next if $_ eq 'examples/pureproxy';
+    next if $_ eq 'fatpack/pureproxy';
     eol_unix_ok $_, "No incorrect line endings in '$_'", { trailing_whitespace => 1, all_reasons => 1 };
 }
 close $fh;
